filegroup(
    name = "data",
    srcs = glob(["data/*.txt"]),
)

cc_binary(
    name = "bench",
    srcs = ["bench.cc"],
    deps = [
        "//darts_ac",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
    ],
    data = [
        ":data",
    ],
)
